# W266_Final

./: Final Presentation.pptx  README.md  baselineModel.ipynb  chunkBertBase.ipynb  chunkBertLargeCased.ipynb  chunkBertMRPC.ipynb  eda.ipynb  parser_run.ipynb
coref_submit/: export_pipeline.py
coref_submit/poetry-mica-char-coref/: 241113_experiment.ipynb  env.yml  pyproject.toml  requirements.txt
coref_submit/poetry-mica-char-coref/bechdel_test_eval/: coreference_resolution_predict.py  evaluate_bechdel_predictions.ipynb
coref_submit/poetry-mica-char-coref/data/Mar09_01_31_43PM_24839/: train.gold.conll  train.jsonlines  train.pred.conll
coref_submit/poetry-mica-char-coref/data/addsays/: train.jsonlines  train_wl.jsonlines
coref_submit/poetry-mica-char-coref/data/nocharacters/: train.jsonlines  train_wl.jsonlines
coref_submit/poetry-mica-char-coref/data/regular/: train.jsonlines  train_wl.jsonlines
coref_submit/poetry-mica-char-coref/movie_coref/: data.py  movie_coref.py
coref_submit/poetry-mica-char-coref/movie_coref/coreference/: model.py
screenplayparser/: __main__.py  parser.py  robust.py  rule.py
