[tool.poetry]
name = "poetry-mica-char-coref"
version = "0.1.0"
description = "Coreference resolution environment"
authors = ["alecnaidoo <alecarnassi@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10.4"
torch = "^1.12.1"
torchaudio = "^0.12.1"
torchvision = "^0.13.1"
transformers = "^4.21.2"
huggingface-hub = "^0.26.2"
sentence-transformers = "^3.3.1"
tensorflow-estimator = "^2.8.0"
scipy = "^1.9.1"
numpy = "^1.22.3"
pandas = "^1.4.3"
tqdm = "^4.64.0"
pyyaml = "^6.0"
matplotlib = "^3.5.2"
tokenizers = ">=0.19"
docopt-ng = "^0.8.1"
scorch = "^0.2.0"
beautifulsoup4 = "^4.11.1"
aiohttp = "^3.8.1"
anyio = "^3.5.0"
async-timeout = "^4.0.1"
attrs = "^21.4.0"
defusedxml = "^0.7.1"
jupyter = "^1.0.0"
jupyterlab = "^3.4.4"
ipykernel = "^6.15.2"
ipywidgets = "^8.0.1"
jsonlines = "^4.0.0"
notebook = "6.5.4"
jupyter-server = "1.18.1"
nltk = "^3.9.1"
spacy = "<3.8.0"
unidecode = "^1.3.8"
gpustat = "^1.1.1"
scikit-learn = "^1.5.2"
tensorflow = "^2.18.0"
tf-keras = "^2.18.0"
sentencepiece = "^0.2.0"
openai = "^1.55.0"
networkx = "^3.4.2"
node2vec = "^0.5.0"
python-louvain = "^0.16"
convokit = "<3.0.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"